made app.html empty and moved it to home page. fixed routing, added a blurred image of home page to signup page.

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,4 +1,4 @@
-main{
+/* main{
   font-family:"JetBrains Mono", Arial, Helvetica, sans-serif;
   font-optical-sizing: auto;
   font-weight: <weight>;
@@ -81,4 +81,4 @@ main{
   margin: 10%;
   margin-top:3%;
   padding-bottom:50px;
-}
+} */
